fix: in collapsed tables, hide the scroll overlay and fix a sizing issue (#2)

--- a/modules/ext.bigtable.styles/components/ScrollOverlay.less
+++ b/modules/ext.bigtable.styles/components/ScrollOverlay.less
@@ -31,3 +31,11 @@
 .ext-bigtable-wrapper--scrollable-right::after {
     opacity: 1;
 }
+
+// don't show the scroll overlay when a table is collapsed
+.ext-bigtable-wrapper:has(.bigtable.mw-collapsed) {
+    &::before,
+    &::after {
+    	opacity:0;
+    }
+}
