--- a/modules/ext.bigtable.styles/main.less
+++ b/modules/ext.bigtable.styles/main.less
@@ -5,11 +5,11 @@
 	display: flex;
 	position: relative;
 	margin-top: 1em;
-	max-width: max-content;
-	max-width: fit-content;
 
 	> .ext-bigtable-wrapper__inner {
 		overflow-x: auto;
+		// For collapsed tables, allow the caption to be sized with local CSS
+		width:100%;
 	}
 }
 
